gateway-implmentation/openshift-yaml/08-sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  namespace: app-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
        istio.io/dataplane-mode: ambient
    spec:
      serviceAccountName: sample-api
      containers:
        - name: sample-api
          image: REPLACE_ME_SAMPLE_IMAGE
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  namespace: app-sample
spec:
  selector:
    app: sample-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
