gateway-implmentation/openshift-yaml/05-gateway-api-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-api-ingress
  namespace: mesh-ingress
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      hostname: REPLACE_ME_PUBLIC_HOSTNAME
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: public-api-ingress-cert
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: enabled
