gateway-implmentation/openshift-yaml/06-gateway-api-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-api-route
  namespace: app-sample
spec:
  parentRefs:
    - name: public-api-ingress
      namespace: mesh-ingress
  hostnames:
    - REPLACE_ME_PUBLIC_HOSTNAME
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sample
      backendRefs:
        - name: sample-api
          port: 8080
