gateway-implmentation/openshift-yaml/07-egress-gateway-and-external-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-egress
  namespace: mesh-egress
spec:
  gatewayClassName: istio
  listeners:
    - name: tls-egress
      hostname: REPLACE_ME_PARTNER_HOST
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: enabled
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: partner-external-api
  namespace: app-sample
spec:
  hosts:
    - REPLACE_ME_PARTNER_HOST
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: egress-gateway-allow-app-sample
  namespace: mesh-egress
spec:
  selector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: external-egress
  rules:
    - from:
        - source:
            namespaces:
              - app-sample
